# nshm-hazard-graphql-api

./: .bumpversion.cfg  .env.tests  .gitignore  .yarnrc.yml  AWS_GHOST_ACCOUNT_DEPLOYMENT_ISSUE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerise-00.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  serverless.yml  setup.cfg
.github/workflows/: deploy-to-aws.yaml  dev.yml  release.yml  run-tests.yml
.llm/: log.jsonl
docs/performance/: migration_performance_tests.md
nshm_hazard_graphql_api/: __init__.py  cloudwatch.py  config.py  handler.py  library_version_check.py  logging_aws.yaml  nshm_hazard_graphql_api.py
nshm_hazard_graphql_api/schema/: schema.py
nshm_hazard_graphql_api/schema/toshi_hazard/: __init__.py  datasets.py  disaggregations.py  gridded_hazard.py  gridded_hazard_helpers.py  hazard_curves.py  hazard_schema.py
nshm_hazard_graphql_api/scripts/: perf_test.py
scripts/: smoke_test.py
tests/: __init__.py  conftest.py  test_clipping.py  test_gridded_hazard.py  test_gridded_hazard_fix_issue_79.py  test_gridded_hazard_helpers.py  test_gridded_hazard_moto.py  test_gridded_hazard_with_nulls.py  test_hazard_arbitrary_points.py  test_hazard_curve_migration.py  test_hazard_resolve_franz_josef.py  test_hazard_resolve_named_points.py  test_nshm_hazard_graphql_api.py
tests/fixtures/HAZAGG_2022_API_JSON/: NSHM_v1.0.4_PGA_-41.300~174.780_0.995_400.json  NSHM_v1.0.4_PGA_-41.300~174.780_0.995_750.json  NSHM_v1.0.4_SA(0.5)_-41.300~174.780_0.995_400.json  NSHM_v1.0.4_SA(0.5)_-41.300~174.780_0.995_750.json
