[tool]
[project]
name = "nshm-hazard-graphql-api"
version = "0.1.1"
homepage = "https://github.com/gns-science/nshm-hazard-graphql-api"
description = "A Grapql API for NZHSM Hazard.."
#authors = [{"GNS Science New Zealand" = "<nshm@gns.cri.nz>"}]
readme = "README.md"
license =  "AGPL3"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "nshm_hazard_graphql_api" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pyyaml = "^6.0.1"
graphql-server = {extras = ["flask"], version = "^3.0.0b7"}
graphene = "^3.3"

boto3 = "^1.24.57"
python-dateutil = "^2.8.2"
nzshm-model = "^0.13.6"
nzshm-common = "^0.8.4"
matplotlib = "^3.10.3"
pyproj = "^3.7.1"
geopandas = "^1.0.1"
werkzeug = "^3.1.3"
poetry-plugin-export = "^1.9.0"
serverless-wsgi = "^3.0.5"
python-dotenv = "^1.1.0"
toshi-hazard-store = {git = "https://github.com/GNS-Science/toshi-hazard-store", rev = "feature/77_hazard_query_and_migration"}

[tool.poetry.group.dev.dependencies]
tox = "^4.2.8"
black  = { version = "^22.3"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}

mkdocs  = { version = "^1.1.2"}
mkdocs-include-markdown-plugin  = { version = "^1.0.0"}
mkdocs-material  = { version = "^6.1.7"}
mkdocstrings  = { version = "^0.18.0"}
mkdocs-material-extensions  = { version = "^1.0.1"}
mkdocs-autorefs = {version = "^0.3.1"}

pymdown-extensions = {version = "^9.4"}
mkdocstrings-python = {version = "^0.6.5"}
mkdocs-pymdownx-material-extras = "^2.0.3"

twine  = { version = "^3.3.0"}

pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1"}
#jinja2 = {version = "3.0.3"}
#moto = "^3.1.10"
types-python-dateutil = "^2.8.16"
types-PyYAML = "^6.0.7"
moto = "^4.1.12"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.1.0b3"]
build-backend = "poetry.core.masonry.api"
