[project]
name = "nshm-hazard-graphql-api"
version = "0.2.3"
homepage = "https://github.com/gns-science/nshm-hazard-graphql-api"
description = "A Grapql API for NZHSM Hazard.."
authors = [
    {name = "Chris B Chamberlain",email = "chrisbc@artisan.co.nz"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0-or-later"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.12',
]
packages = [
    { include = "nshm_hazard_graphql_api" },
    { include = "tests", format = "sdist" },
]

dependencies = [
    "boto3 (>=1.24.57)",
    "flask (>=3.0.3)",
    "flask-cors (>=6.0)",
    "geopandas (>=1.0.1)",
    "graphene (>=3.3)",
    "graphql-server (==3.0.0b7)",
    "matplotlib (>=3.10.3)",
    "nzshm-common (>=0.6.0)",
    "nzshm-common (>=0.8.4)",
    "nzshm-model (>=0.13.6)",
    "pyproj (>=3.7.2)",
    "python-dateutil (>=2.8.2)",
    "python-dateutil (>=2.8.2)",
    "python-dotenv (>=1.1.0)",
    "pyyaml (>=6.0.1)",
    "serverless-wsgi (>=3.0.5)",
    "toshi-hazard-store (>=1.2.1)",
]

[tool.poetry.group.dev]
optional = true


[dependency-groups]
dev = [
    "black",
    "bump2version",
    "flake8-docstrings",
    "flake8",
    "isort",
    "moto (>=5.1)",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "safety",
    "sgqlc",
    "tox",
    "types-python-dateutil",
    "types-pyyaml"
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.1.0b3"]
build-backend = "poetry.core.masonry.api"
