[project]
name = "nshm-hazard-graphql-api"
version = "0.4.0"
description = "A Grapql API for NZHSM Hazard.."
authors = [
    {name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz"},
    {name = "NSHM Compute Working Group", email = "nshm@gns.cri.nz"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.24.57",
    "flask>=3.0.3",
    "flask-cors>=6.0",
    "geopandas>=1.0.1",
    "graphene>=3.3",
    "graphql-server==3.0.0b7",
    "matplotlib>=3.10.3",
    "nzshm-common>=0.8.4",
    "nzshm-model>=0.13.6",
    "pyproj>=3.7.2",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "serverless-wsgi>=3.0.5",
    "toshi-hazard-store>=1.4.2",
]

[project.urls]
homepage = "https://github.com/gns-science/nshm-hazard-graphql-api"

[dependency-groups]
dev = [
    "bump2version",
    "moto>=5.1",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "safety",
    "sgqlc",
    "tox",
    "tox-uv",
    "types-python-dateutil",
    "types-pyyaml",
]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { "nzshm-common" = false, "nzshm-model" = false, "toshi-hazard-store" = false }
constraint-dependencies = ["lance-namespace<0.6"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["nshm_hazard_graphql_api"]

[tool.hatch.build.targets.sdist]
include = ["nshm_hazard_graphql_api", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
